--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: 油菜地
 subtitle: '记录个人生活与技术博客'
 description: ''
-keywords:
+keywords: 博客
 author: lixen
 language: zh-CN
 timezone: 'Asia/Shanghai'
